fix: update formulaire

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="images/lambo2.jpg">
             <img src="images/r5.jpg">
         </div>
-        <div class="image_accueil">
+        <div id="image_accueil">
             <div>
                 <img src="images/btc.png" />
                 <figcaption>
