fix: update API

--- a/index.html
+++ b/index.html
@@ -35,29 +35,7 @@
             <img src="images/r5.jpg">
         </div>
         <div id="image_accueil">
-            <div>
-                <img src="images/btc.png" />
-                <figcaption>
-                    <h1 id="outputbtc"></h1>
-                </figcaption>
-            </div>
-            <div>
-                <img src="images/eth.png" />
-                <figcaption id="eth">
-                    <h1 id="outputeth"></h1>
-                </figcaption>
-            </div>
-            <div>
-                <img src="images/monero.png" />
-                <figcaption id="xmr">
-                    <h1 id="outputxmr"></h1>
-                </figcaption>
-            </div>
-            <div>
-                <img src="images/xvg.png" />
-                <figcaption id="xvg">
-                    <h1 id="outputxvg"></h1>
-                </figcaption>
+            <div id="api">
             </div>
         </div>
         <form id="formulaire">
