--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script>
-    <script src="crypto.js" defer></script>
-    <script src="form.js" defer></script>
+    <script src="accueil.js" defer></script>
     <title>CryptoLambo</title>
 </head>
 
@@ -22,7 +21,7 @@
         <div class="dropdown">
             <button onclick="functionDropdown()" class="dropbtn">Dropdown</button>
             <div id="myDropdown" class="dropdown-content">
-                <a href="accueil.html">Accueil</a>
+                <a href="index.html">Accueil</a>
                 <a href="gallery.html">Galerie</a>
                 <a href="jeux.html">Jeux</a>
             </div>
