feat: delete img galerie fixes #13

--- a/gallery.html
+++ b/gallery.html
@@ -33,11 +33,8 @@
         <p>Veuillez renseigner l'adresse url de l'image</p>
         <input type="text" id="champsUrl">
         <button type="button" id="addImage">ajouter une image</button>
-        <div id="image">
-        </div>
-        <div id="envoyerImage">
-
-        </div>
+        <div id="image"></div>
+        <div id="envoyerImage"></div>
     </main>
     <footer>
         <p class="copyright">Copyright 2021</p>
